Update email link and footer year and designer

--- a/index.html
+++ b/index.html
@@ -295,15 +295,17 @@
                     <a href="https://www.instagram.com/akshats_creation/" target="_blank" class="w-10 h-10 rounded-full bg-neutral-900 flex items-center justify-center hover:bg-purple-600 transition-colors text-white">
                         <i data-lucide="instagram" class="w-5 h-5"></i>
                     </a>
-                    <a href="mailto:as.creations.studiio@gmail.com" class="w-10 h-10 rounded-full bg-neutral-900 flex items-center justify-center hover:bg-blue-600 transition-colors text-white">
-                        <i data-lucide="mail" class="w-5 h-5"></i>
+                   <a href="mailto:as.creations.studiio@gmail.com?subject=Inquiry%20for%20Shoot%20Booking%20%7C%20%5BClient%20Name%5D&body=Dear%20AS%20Creation%20Team%2C%0A%0AI%20hope%20this%20email%20finds%20you%20well.%0A%0AI%20am%20interested%20in%20booking%20your%20services%20for%20an%20upcoming%20event.%20Please%20find%20the%20preliminary%20details%20below%3A%0A%0A%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%0A%F0%9F%93%85%20EVENT%20DETAILS%0A%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%0A%E2%80%A2%20Full%20Name%3A%20%20%5B%20Your%20Name%20Here%20%5D%0A%E2%80%A2%20Phone%20Number%3A%20%20%5B%20Your%20Phone%20Number%20%5D%0A%E2%80%A2%20Event%20Date%3A%20%20%5B%20DD%20%2F%20MM%20%2F%20YYYY%20%5D%0A%E2%80%A2%20Event%20Type%3A%20%20%5B%20Wedding%20%2F%20Engagement%20%2F%20Corporate%20%2F%20Other%20%5D%0A%E2%80%A2%20Location%2FVenue%3A%20%20%5B%20City%20or%20Venue%20Name%20%5D%0A%0A%F0%9F%93%9D%20SPECIFIC%20REQUIREMENTS%0APlease%20describe%20your%20vision%2C%20deliverables%20needed%20(photos%2C%20video%2C%20drone)%2C%20or%20any%20special%20requests%3A%0A%0A%5B%20Type%20your%20message%20here...%20%5D%0A%0A%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%E2%94%80%0ALooking%20forward%20to%20your%20response%20and%20availability.%0A%0ABest%20Regards%2C%0A%5BYour%20Name%5D" 
+                       class="w-10 h-10 rounded-full bg-neutral-900 flex items-center justify-center hover:bg-blue-600 transition-colors text-white"
+                           title="Send detailed inquiry">
+                    <i data-lucide="mail" class="w-5 h-5"></i>
                     </a>
                 </div>
             </div>
             
             <div class="border-t border-neutral-800 pt-8 flex flex-col md:flex-row justify-between items-center text-sm text-gray-500">
-                <p>&copy; 2024 AS Creation. All rights reserved.</p>
-                <p class="mt-2 md:mt-0">Designed for Creators.</p>
+                <p>&copy; 2026 AS Creation. All rights reserved.</p>
+                <p class="mt-2 md:mt-0">Designed By Shashank.</p>
             </div>
         </div>
     </footer>
