--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <div class="w-full md:w-auto overflow-hidden">
                     <div class="flex gap-2 overflow-x-auto pb-2 md:pb-0 w-full scrollbar-hide">
                         <button class="filter-btn active px-6 py-2 rounded-full text-sm font-medium capitalize transition-all whitespace-nowrap bg-white text-black flex-shrink-0" data-filter="all" onclick="filterPortfolio('all')">All</button>
-                        <button class="filter-btn px-6 py-2 rounded-full text-sm font-medium capitalize transition-all whitespace-nowrap bg-neutral-800 text-gray-300 hover:bg-neutral-700 flex-shrink-0" data-filter="festival" onclick="filterPortfolio('religious')">Festival</button>
+                        <button class="filter-btn px-6 py-2 rounded-full text-sm font-medium capitalize transition-all whitespace-nowrap bg-neutral-800 text-gray-300 hover:bg-neutral-700 flex-shrink-0" data-filter="festival" onclick="filterPortfolio('festival')">Festival</button>
                         <button class="filter-btn px-6 py-2 rounded-full text-sm font-medium capitalize transition-all whitespace-nowrap bg-neutral-800 text-gray-300 hover:bg-neutral-700 flex-shrink-0" data-filter="reels" onclick="filterPortfolio('reels')">Reels</button>
                         <button class="filter-btn px-6 py-2 rounded-full text-sm font-medium capitalize transition-all whitespace-nowrap bg-neutral-800 text-gray-300 hover:bg-neutral-700 flex-shrink-0" data-filter="marketing" onclick="filterPortfolio('marketing')">Marketing</button>
                     </div>
@@ -140,7 +140,7 @@
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="portfolio-grid">
-                <div class="portfolio-item group relative overflow-hidden rounded-xl aspect-[4/5] cursor-pointer" data-category="reels">
+                <div class="portfolio-item group relative overflow-hidden rounded-xl aspect-[4/5] cursor-pointer" data-category="festival">
                     <video src="Assets/50daysStory.mp4" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110" autoplay muted loop playsinline></video>
                     <div class="absolute inset-0 bg-gradient-to-t from-black/90 via-black/20 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex flex-col justify-end p-6">
                         <span class="text-purple-400 text-xs font-bold uppercase tracking-wider mb-1">Social Media</span>
@@ -151,8 +151,8 @@
                 <div class="portfolio-item group relative overflow-hidden rounded-xl aspect-[4/5] cursor-pointer" data-category="reels">
                     <img src="https://images.unsplash.com/photo-1611162616475-46b635cb6868?auto=format&fit=crop&w=800&q=80" alt="Reel" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/90 via-black/20 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex flex-col justify-end p-6">
-                        <span class="text-purple-400 text-xs font-bold uppercase tracking-wider mb-1">Social Media</span>
-                        <h3 class="text-xl font-bold text-white">Fashion Reel</h3>
+                        <span class="text-purple-400 text-xs font-bold uppercase tracking-wider mb-1">Ganpati Festival</span>
+                        <h3 class="text-xl font-bold text-white">Festival Reel</h3>
                     </div>
                 </div>
 
